--- a/frontend/src/app/features/clients/clients.html
+++ b/frontend/src/app/features/clients/clients.html
@@ -1,1 +1,41 @@
-<p>clients works!</p>
+<div class="clients-page">
+  <div class="clients-back">
+    <button type="button" routerLink="/" aria-label="Retour à l'accueil" class="back-btn">
+      &#8592; Accueil
+    </button>
+  </div>
+  <div class="clients-header">
+    <form action="">
+        <input type="text" placeholder="Rechercher un client..." />
+        <button type="button">Ajouter un client</button>
+    </form>
+  </div>
+
+  <table class="clients-table">
+    <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Date de naissance</th>
+        <th>Email</th>
+        <th>Téléphone</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (client of clients; track client.id) {
+        <tr>
+          <td>{{ client.nom }}</td>
+          <td>{{ client.prenom }}</td>
+          <td>{{ client.date_de_naissance | date:'dd/MM/yyyy' }}</td>
+          <td>{{ client.telephone }}</td>
+          <td>{{ client.email }}</td>
+          <td>
+            <button>Modifier</button>
+            <button>Supprimer</button>
+          </td>
+        </tr>
+      }
+    </tbody>
+  </table>
+</div>
