--- a/frontend/src/app/features/clients/pages/clients.scss
+++ b/frontend/src/app/features/clients/pages/clients.scss
@@ -60,7 +60,7 @@
 }
 
 .clients-header button {
-  background: #1565c0;
+  background: #00952d;
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -71,7 +71,7 @@
 }
 
 .clients-header button:hover {
-  background: #0d47a1;
+  background: #005c1c;
   transform: translateY(-2px);
 }
 
