--- a/frontend/src/app/features/dashboard/pages/dashboard.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard.html
@@ -4,7 +4,7 @@
         <div class="dashboard-card">
             <h2>Clients</h2>
             <p>Nombre total : 0</p>
-            <a href="/clients" class="dashboard-link">Voir les clients</a>
+            <a routerLink="/clients" class="dashboard-link">Voir les clients</a>
         </div>
         <div class="dashboard-card">
             <h2>Produits</h2>
